--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,5 +1,5 @@
 name: Grace Perkins
-studentNumber: z5214131/Monday/Tuesday
+studentNumber: z5214131
 gitHubUsername: graceperkins101
 stackoverflow: http://stackoverflow.com/users/1835727/ben
 unswEmail: z5214131@ad.unsw.edu.au/name@company.com.au
